--- a/pages/p3/950282.md
+++ b/pages/p3/950282.md
@@ -1,4 +1,4 @@
-### 忠义之气可与岳飞媲美 猜猜他是谁？(图)
+### 有驱逐令在身华人女子 豪骗300万挥霍(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="忠义之气可与岳飞媲美——诸葛亮" src="https://img2.secretchina.com/pic/2019/8-18/p2494832a866101758-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="有驱逐令在身华人女子 还敢豪骗同胞300万" src="https://img2.secretchina.com/pic/2018/12-8/p2319011a480673594-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   忠义之气可与岳飞媲美——诸葛亮（图片来源：天外客／正见网）
+   加拿大法庭（示意图/图片来源：eff Vinnick/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,44 +29,48 @@
   </div>
  </div>
  <p>
-  一谈到忠义之气，很多人会想到
+  【看中国2020年10月24日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/岳飞" target="_blank">
-    岳飞
+   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+    加拿大
    </span>
   </strong>
-  。有点历史知识，对岳飞生平事迹有所了解的，今天到了位于河南安阳汤阴县的岳飞庙，看到岳飞巍然屹立的塑像，头顶匾额上“还我河山”的巍峨大字，对岳飞会肃然起敬，会被岳飞的“浩气忠魂”所感动。岳飞的
+  温哥华一名有
   <strong>
-   忠义
+   驱逐令
   </strong>
-  之气贯通古今。
+  在身的华人女子，加拿大一名有驱逐令在身的华人女子，不是老老实实、脚踏实地的做人，以期望有一天能打赢驱逐令官司后，好好在加拿大好好生活下去，相反，她涉嫌以成立帮助中国留学生和游客的企业为名，向3名投资者
+  <strong>
+   欺诈
+  </strong>
+  逾300万元。她将骗来的钱用来给自己赌博、购买个人物品、还债，甚至用来支付替她打驱逐令抗辩官司的律师费等等。卑诗证券委员会表示，该案听证会将于12月举行。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  岳飞的故事在《说岳全传》里以小说演义的形式出现，绘声绘色，形象生动。岳飞对母亲很孝顺，听母亲的话。岳母怕岳飞以后随着地位的升迁失去
-  <span href="https://www.secretchina.com/news/gb/tag/忠义" target="_blank">
-   忠义
+  据加拿大媒体报道，卑诗证券委员会（BCSC）10月21日称，一名此前接到
+  <span href="https://zh.wikipedia.org/wiki/1976%E5%B9%B4%E5%8A%A0%E6%8B%BF%E5%A4%A7%E7%A7%BB%E6%B0%91%E6%B3%95" target="_blank">
+   加拿大
   </span>
-  本色，在他的后背上刺上“尽忠报国”四个字（在小说中是“精忠报国”）；岳飞领兵打仗，秉承忠义本色，带出一支“冻死不拆屋，饿死不掳掠”的岳家军，金国士兵只要看到“岳”字旗就闻风丧胆；被秦桧以“莫须有”的罪名诬陷入狱，岳飞也没有屈打成招。第一次在大理寺卿被审讯时，岳飞脱去布衫，露出背上“尽忠报国”四个字，亲见者无不动容，相信岳飞是冤枉的，但面对秦桧的淫威，正义者都感到无能为力。秦桧安排自己的亲信强迫岳飞写下供状，岳飞写下了“天日昭昭、天日昭昭”八个大字，一片忠义之气、忠义之心，力透纸背，苍天可监。一直到岳飞屈死风波亭，给后人留下了不可磨灭的忠义之气。
+  驱逐令的华人女子张美云（Meiyun Zhang，音译），涉嫌在2014年至2016年间，说服两名温哥华居民和一名列治文居民，借钱给她或投资到她的生意上，可以在没有风险的情况下得到6％至10％的投资回报。
  </p>
  <p>
-  历史上还有一个人物的忠义之气可以和岳飞相媲美，就是老少妇孺皆知的
-  <span href="https://www.secretchina.com/news/gb/tag/诸葛亮" target="_blank">
-   诸葛亮
+  卑诗证监会表示，没有风险的投资是不可能达到这个比率的回报的。
+ </p>
+ <p>
+  报道称，张美云告诉其中两名投资者，其投资的款项是用来帮助
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  。
+  留学生在加拿大取得签证的业务。她向第三名投资者称，款项会用于外币兑换加币，给中国留学生和来加拿大的游客使用。
  </p>
  <p>
-  大陆的读者阅读《三国演义》，看到诸葛亮出场后，故事精彩连呈，很多人关注的是诸葛亮的智谋，运筹帷幄的本事，但很少有读者关注到诸葛亮的忠义之气。岳飞的忠义之气，是在善恶较量，激烈的碰撞中表现，很容易引起人心灵的共鸣，能激起人对恶的憎恶，对善的渴望与赞美。诸葛亮的不是，他是在一言一行，在一场场政治、军事较量中体现，而且他的智勇双全很容易掩盖他的忠义之气，不仔细思考与体察，很容易被忽略。
+  但事实上，张美云并没有按她说的把钱用在向投资者所承诺的项目上。证监会指控她将钱花在下列事项：
  </p>
  <p>
-  诸葛亮未出茅庐，已经知道天下要三分，这是天意。刘备因自己的皇叔身份，觉得自己有责任匡扶汉室，所以要以汉室名义再次一统天下。诸葛亮为了酬谢刘备的三顾茅庐之恩义，一心一意的帮助刘备实现梦想，整个过程中可谓尽心尽力，一片忠义之心。从刘备无立足之地，到有点政治资本与积累，最后片隅川蜀之地建立蜀国政权。
- </p>
- <p>
-  建立蜀国后，有帮助刘备出谋划策，联吴抗曹，训练士兵积极备战，为国家的未来发展制定了一系列政策，为民为国操碎了心。
+  1、向加拿大和中国的投资者支付回报；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -81,7 +85,7 @@
   </div>
  </center>
  <p>
-  刘备听说关羽被吴国所杀，要倾一国之力讨伐东吴。诸葛亮没有死谏刘备，是因为诸葛亮知道刘、关、张的桃园三结义，会为未来奠定“义”文化，“义”文化要有始有终，虽然东吴不当灭，刘备即使兵败，也为奠定未来文化尽了力，从另一方面讲，是成就了刘备，这同样是诸葛亮忠义的表现。
+  2、向卡尔加里房地产经纪人偿还个人贷款；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,7 +100,7 @@
   </div>
  </center>
  <p>
-  刘备兵败，困守白帝城，把刘禅讬付给诸葛亮，并嘱咐：如果刘禅不合适当皇帝，诸葛亮可以取而代之。《三国演义》中描述诸葛亮的表现：孔明听毕，汗流遍地，手足无措，泣拜于地曰：“臣安敢不竭股肱之力，尽忠贞之节，继之以死乎！”言讫，叩头流血。中共党文化称之为诸葛亮虚伪，怕被刘备杀头，故意为之。根本不是。满脑子党文化，否定传统文化的中共御用文人，根本就体会不到人有了忠义之气后的表现。笔者引用这段文字，能真实的感受到诸葛亮言行中的忠义之气。
+  3、个人购买物品；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +115,7 @@
   </div>
  </center>
  <p>
-  刘禅即位后，诸葛亮明知蜀国灭不了魏国，也统一不了天下，但是诸葛亮仍然像刘备在世时那样，帮助刘备实现未竟的愿望。六出祁山，讨伐魏国，每次都是各种原因兵败而回。战场上的不确定的因素太多，特别是兵败的，最容易引起溃败与伤亡，但是诸葛亮每次都是全身而退，这难道不是诸葛亮忠义之气的体现？！
+  4、支付个人水电费；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +130,22 @@
   </div>
  </center>
  <p>
-  失街亭一节，中共又是编入中学课本，又是变成戏剧，目的可不是颂扬诸葛亮，而是贬低丑化诸葛亮，那么有智慧，上知天文，下知地理，能掐会算的人，怎么会出现这么低级的错误？
+  5、支付移民律师费用，用以抗辩加拿大移民部对其发出的遣返令；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  6、提取现金；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +164,7 @@
   </ins>
  </center>
  <p>
-  诸葛亮灭不了魏国，这是天意，每次兵出祁山，都是注定要失败的。街亭当时是个重要的军事重地，换任何人去守，都必失，只是时间长短而已。诸葛亮安排言过其实的马谡去守街亭，用意很深。未来的文化不能没有教训存在，马谡为后世留下宝贵的教训：言过其实，不可大用；另外一点，是成就了马谡，能在未来的文化中留下名字都是非同小可的事。
+  7、在赌场赌博。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +179,7 @@
   </div>
  </center>
  <p>
-  《三国演义》中有一句话评价诸葛亮：诸葛一生唯谨慎。确实是，诸葛亮做事很谨慎，他要考虑的不单单是当时的境况与天象变化，既要顺应天意，又要为未来留下表现仁、义、礼、智、信，忠、孝、节、义等文化，不能不谨慎，可以说诸葛亮为了人类的未来鞠躬尽瘁，操碎了心血，单单一个“忠义之气”，诸葛亮用尽了出山后所有的能力去演绎，直到病死五丈原。即使在病重期间，安排的后世中同样贯穿着诸葛亮的忠义之气，读者用心读就能领略一二。
+  与此同时，张美云牵涉两宗卑诗最高法院的民事诉讼。一名列治文周姓退休人士Nan Ping Zhou,于2016年7月至2017年12月间，把钱交给张美云。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +194,22 @@
   </div>
  </center>
  <p>
-  站在党文化的角度研究《三国演义》，站在否定古人的角度研究诸葛亮，永远得不到真知灼见。摒弃党文化，复兴传统文化，走回传统路时，人一定能得到许多正的认识与不一样的感受和思想的升华。
+  最初张美云还了部分金钱，但从2018年1月起便停止还钱。另一民事诉讼原诉人为Wendy Hau Wan Parker，她是温哥华女商人，在2017年2月至12月间与张美云签下7份借款协议，但到期对方都没有还钱，至今欠她6万元。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  BCSC表示，听证会将于12月举行。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,13 +273,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/22/910977.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950282.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/25/950282.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/910977.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/950282.md' width='0px' height='0px'/>
