--- a/indexes/p2.md
+++ b/indexes/p2.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看官场](S看官场.md) 
-
+#### [街道小官贪逾两千万 自曝“像着魔一样贪图女色”(图)](../pages/p2/950428.md) 
+#### [王岐山朱镕基曝光 拥美派占上风？(图)](../pages/p2/950434.md) 
+#### [中共五中全会登场 五大看点值得关注(图)](../pages/p2/950424.md) 
+#### [曾劝习近平抓江泽民 罗瑞卿之子罗宇在美去世(图)](../pages/p2/950375.md) 
+#### [新华社社长蔡名照被免职 传曾出轨实习生遭捉奸(图)](../pages/p2/950359.md) 
+#### [五中全会前 朱镕基“露面”庆生引猜测(组图)](../pages/p2/950342.md) 
+#### [街道小官贪逾两千万 自曝“像着魔一样贪图女色”(图)](../pages/p2/950428.md) 
+#### [王岐山朱镕基曝光 拥美派占上风？(图)](../pages/p2/950434.md) 
+#### [中共五中全会登场 五大看点值得关注(图)](../pages/p2/950424.md) 
+#### [【中国时局】五中全会有大佬陨落？(图)](../pages/p2/950349.md) 
+#### [曾劝习近平抓江泽民 罗瑞卿之子罗宇在美去世(图)](../pages/p2/950375.md) 
+#### [新华社社长蔡名照被免职 传曾出轨实习生遭捉奸(图)](../pages/p2/950359.md) 
+#### [五中全会前 朱镕基“露面”庆生引猜测(组图)](../pages/p2/950342.md) 
+#### [高层集体反习？五中全会前信号异常(图)](../pages/p2/950295.md) 
+#### [政法系高官王立科投案被查 是薄熙来余党(图)](../pages/p2/950334.md) 
+#### [高官因何主动投案成风？浙江又一例(图)](../pages/p2/950291.md) 
+#### [解密：颠倒国际政商圈的神秘富豪叶简明(图)](../pages/p2/950269.md) 
+#### [五中全会前王岐山破下台传闻？罕见单独露面(图)](../pages/p2/950279.md) 
+#### [中纪委：江苏常委、政法老虎王立科落马(图)](../pages/p2/950299.md) 
+#### [40年来最狠 习近平困境中对外放话何意？(视频)](../pages/p2/950274.md) 
+#### [传北京301医院戒严 中南海大人物地下通道送医(图)](../pages/p2/950266.md) 
+#### [五中全会前中纪委曝处理39万人(图)](../pages/p2/950250.md) 
+#### [习喊话美国要开战？中南海将有大事发生(视频)](../pages/p2/950254.md) 
+#### [京西宾馆重警密布 中南海权斗内幕火爆(图)](../pages/p2/950255.md) 
+#### [中共公安部局长疑遭贬 调任湖南民政厅书记(图)](../pages/p2/950238.md) 
+#### [曝习批美狠话抄自毛泽东 王沪宁抄的？(组图)](../pages/p2/950236.md) 
