--- a/indexes/p5.md
+++ b/indexes/p5.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看财经](S看财经.md) 
-
+#### [中印紧张 全球供应链重组 台印关系有望腾飞(图)](../pages/p5/950462.md) 
+#### [前三季度经济运行综述：政府、居民与企业的三足债务(组图)](../pages/p5/950404.md) 
+#### [中国最大银行雷爆：被最神秘“民企”拖下水……(组图)](../pages/p5/950407.md) 
+#### [魔咒再现 国企巨头违约爆雷 政府信用危机升级&nbsp;(图)](../pages/p5/950391.md) 
+#### [数字人民币城市推广难 官方目光瞄向农村(图)](../pages/p5/950292.md) 
+#### [“云养牛”APP狂割韭菜 投资者血本无归(图)](../pages/p5/950328.md) 
+#### [中印紧张 全球供应链重组 台印关系有望腾飞(图)](../pages/p5/950462.md) 
+#### [英国排除华为 将与日本NEC合作发展5G](../pages/p5/950459.md) 
+#### [浪尖之上的房子……(组图)](../pages/p5/950405.md) 
+#### [外债的构成：中国对外负债5.7万亿美元](../pages/p5/950395.md) 
+#### [前三季度经济运行综述：政府、居民与企业的三足债务(组图)](../pages/p5/950404.md) 
+#### [中国最大银行雷爆：被最神秘“民企”拖下水……(组图)](../pages/p5/950407.md) 
+#### [魔咒再现 国企巨头违约爆雷 政府信用危机升级&nbsp;(图)](../pages/p5/950391.md) 
+#### [三星会长李健熙病逝 股票遗产税创韩国史上最高](../pages/p5/950385.md) 
+#### [英退欧贸易成本无论是否达协议都将很高](../pages/p5/950378.md) 
+#### [美10月PMI升至55.5 创20个月新高](../pages/p5/950339.md) 
+#### [保加利亚与美国签5G安全协议 排除中国供应商](../pages/p5/950338.md) 
+#### [数字人民币城市推广难 官方目光瞄向农村(图)](../pages/p5/950292.md) 
+#### [“云养牛”APP狂割韭菜 投资者血本无归(图)](../pages/p5/950328.md) 
+#### [中国央行酝酿大招 “支付宝们”迎来新变化(图)](../pages/p5/950301.md) 
+#### [美国证监会发史上最大奖 1.14亿美元给举报人](../pages/p5/950300.md) 
+#### [标普确认英国主权债评等为AA 展望稳定](../pages/p5/950296.md) 
+#### [王岐山在上海金融峰会致辞 特别提一个骗局(图)](../pages/p5/950278.md) 
+#### [在华美企如何看习近平的经济“内循环”？(图)](../pages/p5/950276.md) 
+#### [美中第一阶段贸易协议 中方农业采购实现71%](../pages/p5/950273.md) 
+#### [美制裁见效 华为第三季营收仅增3.7%(图)](../pages/p5/950271.md) 
